--- a/src/main/resources/static/css/student-style.css
+++ b/src/main/resources/static/css/student-style.css
@@ -84,11 +84,13 @@ table {
 th {
 	text-align: center;
 	padding: 10px;
+	font-size: 20px;
 }
 
 td {
 	text-align: center;
 	padding: 10px;
+	font-size: 20px;
 }
 
 html, body {
@@ -126,4 +128,13 @@ h1 {
 	width: 100%;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
+}
+
+#dataframe {
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	right: 0px;
+    bottom: 0px;
+    visibility: visible;
 }
