--- a/src/main/resources/static/css/data-style.css
+++ b/src/main/resources/static/css/data-style.css
@@ -199,14 +199,14 @@ input {
 #new-element {
     background-color: var(--color-dark);
     width: 400px;
-    height: 600px;
+    height: 550px;
 
     position: absolute;
     top: 50%;
     left: 50%;
 
     margin-left: -200px;
-    margin-top: -300px;
+    margin-top: -250px;
     border-radius: 25px;
     border: 2px solid var(--color-highlight);
     display: none;
@@ -349,7 +349,7 @@ button {
 }
 
 .no-auto-submit>input {
-	width: 120%;
+	width: 90%;
 	
 	background-color: var(--color-darker);
 	border: inset;
@@ -359,3 +359,8 @@ button {
 	float:right;
 }
 
+.new-grid {
+	display: inline-grid;
+	grid-template-columns: auto auto;
+	grid-row-gap: 20px;
+}
