--- a/src/main/resources/templates/majors.html
+++ b/src/main/resources/templates/majors.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 </head>
-<body onload="getToken(); displayUsername(); addTokenToForm('search'); /*addTokenToForm('newform');*/ addTokenToLinks(); submitSearch();">
+<body onload="getToken(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch();">
 	<div id="wrapper">
 		<header>
 			<h1><a href="admin" class="tokenify">Admin</a> / Smerovi</h1>
@@ -54,39 +54,8 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7</div>
 				<br>
-				<form action="/add_student" id="newform" method="get" target="sendframe" class="pad-medium wide flex-col">
-					<div class="flex-row wide pad-light">
-						<label for="first_name">Ime:</label><input type="text" name="first_name">
-					</div>
-
-					<div class="flex-row wide pad-light">
-						<label for="last_name">Prezime:</label><input type="text" name="last_name">
-					</div>
-
-					<div class="flex-row wide pad-light">
-						<label for="index_num">Index:</label><input type="text" name="index_num">
-					</div>
-
-					<div class="flex-row wide pad-light">
-						<label for="date_of_birth">Datum rodjenja:</label><input type="date" name="date_of_birth">
-					</div>
-
-					<div class="flex-row wide pad-light">
-						<label for="city">Grad:</label><input type="text" name="city">
-					</div>
-
-					<div class="flex-row wide pad-light">
-						<label for="jmbg">JMBG:</label><input type="text" name="jmbg">
-					</div>
-
-					<div class="flex-row wide pad-light">
-						<label for="major_id">Smer:</label>
-						<div class="dropdown no-auto-submit">
-							<input name="major_id" value="" readonly>
-							<div class="dd-options" id="new-major-options">
-							</div>
-						</div>
-					</div>
+				<form action="/add_major" id="newform" method="get" target="sendframe" class="pad-medium wide new-grid">
+					<label for="name">Ime:</label><input type="text" name="name">
 				</form>
 				<div class="flex-row wide pad-medium">
 					<button type="submit" form="newform">Submit</button>
