--- a/src/main/resources/templates/exams.html
+++ b/src/main/resources/templates/exams.html
@@ -20,7 +20,7 @@
 		}
 	</script>
 </head>
-<body onload="getToken(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); setCustomTable(true); submitSearch(); makeRequest('/get_student_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); addTokenToLinks(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); setCustomTable(true); submitSearch(); makeRequest('/get_student_filters','sendframe'); initGetFilters('sendframe');">
 	<div id="wrapper">
 		<header>
 			<h1><a href="admin" class="tokenify">Admin</a> / Ispiti</h1>
