--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 :root {
 	--color-dark: #2C2A4A;
-	--color-darker: #3c3c5c; 
+	--color-darker: #3c3c5c;
 	--color-light: #4F518C;
 	--color-highlight: #907AD6;
 	--color-highlight2: #c9baff;
@@ -18,6 +18,8 @@ html, body {
 	padding: 0;
 	margin: 0;
 	background-color: var(--color-light);
+
+	overflow: auto;
 }
 
 a, p, h1, h2, h3, label, input, ::placeholder {
@@ -31,11 +33,25 @@ h1 {
 #wrapper {
 	height: 100%;
 	width: 100%;
-	background-image: url("../images/lowpoly.png");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	background: rgb(2,0,36);
+	background-image: url("../images/bg.png");
+	
+	background-repeat: repeat;
+	background-size: 100px auto;
 
 	position: relative;
+}
+
+#wrapper:before {
+ 	content:'';
+ 	position:absolute;
+ 	left:0; top:0;
+ 	width:100%; height:100%;
+ 	display:inline-block;
+
+  	background: rgb(28,0,74,0.6);
+	background: linear-gradient(90deg, rgba(28,0,74,0.8) 0%, rgba(72,10,130,0.7) 37%, rgba(110,46,150,0.6) 100%);
+ 	background-size: cover;
 }
 
 header {
@@ -78,7 +94,7 @@ header > * {
 
 #user:hover {
 	background-color: var(--color-darker);
-	outline: 1px solid var(--color-highlight);
+	outline: 1px solid var(--color-highlight2);
 }
 
 #user-options {
@@ -92,7 +108,7 @@ header > * {
 	z-index: 10;
 	background-color: var(--color-darker);
 	/*border-radius: 0 0 25px 25px;*/
-	outline: 1px solid var(--color-highlight);
+	outline: 1px solid var(--color-highlight2);
 	overflow: hidden;
 }
 
