--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,14 +13,14 @@
 	<div id="wrapper">
 		<div id="admin-options-wrapper">
 			<div id="admin-options">
-				<h3>Manage:</h3>
+				<h3>Administracija:</h3>
 				<ul>
-					<li><a href="students" class="tokenify">Students</a></li>
-					<li><a href="staff" class="tokenify">Staff</a></li>
-					<li><a href="majors" class="tokenify">Majors</a></li>
-					<li><a href="courses" class="tokenify">Courses</a></li>
-					<li><a href="exams" class="tokenify">Exams</a></li>
-					<li><a href="users" class="tokenify">Users</a></li>
+					<li><a href="students" class="tokenify">Studenti</a></li>
+					<li><a href="staff" class="tokenify">Predavači</a></li>
+					<li><a href="majors" class="tokenify">Smerovi</a></li>
+					<li><a href="courses" class="tokenify">Predmeti</a></li>
+					<li><a href="exams" class="tokenify">Ispiti</a></li>
+					<li><a href="users" class="tokenify">Korisnici</a></li>
 				</ul>
 			</div>
 		</div>
