--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -36,36 +36,44 @@
 					</div>
 				</form>
 			</div>
-			<br>
-			<h1>Administratori:</h1>
-			<table id="data-admin">
-				<tr>
-					<th>Ime</th><th>Prezime</th><th>Indeks</th>
-				</tr>
-				<tr>
-					<td>Ime</td><td>Prezime</td><td>Indeks</td>
-				</tr>
-			</table>
-			<br>
-			<h1>Predavaci:</h1>
-			<table id="data-lecturer">
-				<tr>
-					<th>Ime</th><th>Prezime</th><th>Indeks</th>
-				</tr>
-				<tr>
-					<td>Ime</td><td>Prezime</td><td>Indeks</td>
-				</tr>
-			</table>
-			<br>
-			<h1>Studenti:</h1>
-			<table id="data-student">
-				<tr>
-					<th>Ime</th><th>Prezime</th><th>Indeks</th>
-				</tr>
-				<tr>
-					<td>Ime</td><td>Prezime</td><td>Indeks</td>
-				</tr>
-			</table>
+
+			<div class="flex-row-stretch">
+				<div class="pad-medium">
+					<h1>Administratori:</h1>
+					<table id="data-admin">
+						<tr>
+							<th>Ime</th><th>Prezime</th><th>Indeks</th>
+						</tr>
+						<tr>
+							<td>Ime</td><td>Prezime</td><td>Indeks</td>
+						</tr>
+					</table>
+				</div>
+
+				<div class="pad-medium">
+					<h1>Predavaci:</h1>
+					<table id="data-lecturer">
+						<tr>
+							<th>Ime</th><th>Prezime</th><th>Indeks</th>
+						</tr>
+						<tr>
+							<td>Ime</td><td>Prezime</td><td>Indeks</td>
+						</tr>
+					</table>
+				</div>
+
+				<div class="pad-medium">
+					<h1>Studenti:</h1>
+					<table id="data-student">
+						<tr>
+							<th>Ime</th><th>Prezime</th><th>Indeks</th>
+						</tr>
+						<tr>
+							<td>Ime</td><td>Prezime</td><td>Indeks</td>
+						</tr>
+					</table>
+				</div>
+			</div>
 
 		<iframe src="" name="sendframe" id="sendframe"></iframe>
 		<iframe src="" name="dataframe" id="dataframe" onload="parseData();"></iframe>
