--- a/src/main/resources/templates/exams.html
+++ b/src/main/resources/templates/exams.html
@@ -34,10 +34,10 @@
 			</div>
 		</header>
 		<div id="content">
+			<br>
 			<div class="table-title">
-				<h2>Exams:</h2>
+				<h1>Ispiti:</h1>
 			</div>
-
 			<table id="exams">
 				<tr>
 					<th>Ime</th><th>Prezime</th><th>Indeks</th>
@@ -47,10 +47,10 @@
 				</tr>
 			</table>
 
+			<br>
 			<div class="table-title">
-				<h2>Deadlines:</h2>
+				<h1>Ispitni rokovi:</h1>
 			</div>
-
 			<table id="exam-deadlines">
 				<tr>
 					<th>Ime</th><th>Prezime</th><th>Indeks</th>
