Added an oncomplete function parameter to makeRequest(), added user widget to admin page, fixed a bug where getFilters event would not be removed after completion.

--- a/src/main/resources/static/css/admin-style.css
+++ b/src/main/resources/static/css/admin-style.css
@@ -16,6 +16,10 @@
 	margin: 25px; 
 }
 
+*{
+	color: white;
+}
+
 ul {
 	/*list-style: none;*/
 	color: white;
@@ -58,4 +62,10 @@ a:after {
 a:hover:after { 
   width: 100%; 
   left: 0; 
+}
+
+#user {
+	padding: 15px;
+
+	background-color: var(--color-dark);
 }
