--- a/src/main/resources/static/css/student-style.css
+++ b/src/main/resources/static/css/student-style.css
@@ -42,13 +42,18 @@ header > * {
 }
 #background-pic-name>p{
 	text-align: center;
+	padding-bottom: 10px;
 }
 #user-img-info{
-	position: center;
 	padding: 10px;
 	width: 200px;
 	height: 200px;
 	margin-left: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 8%;
 }
 
 #content {
@@ -115,6 +120,7 @@ h1 {
 #table4{
 	width: 100%;
 	float: left;
+	position: relative;
 }
 #table4>tbody>tr>td{
 	background-color: var(--color-highlight2) !important;
