Fixed a bug with table colors not skipping hidden elements. Fixed a bug where changing order reverts hidden elements. Added loader for exams.

--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -36,7 +36,7 @@
 		<div id="content">
 			<div id="content-header">
 				<form action="/get_subjects" id="search" method="get" target="dataframe">
-					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="search(this, 'data');">
+					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="fillTable();">
 
 					<div class="form-element">
 						<label class="select-label">Godina:</label>
@@ -110,7 +110,7 @@
 
 					<div class="form-element">
 						<label class="select-label">Rastuci poredak:</label>
-						<input type="checkbox" class="labeled" onchange="fillTable(this.checked);" checked>
+						<input type="checkbox" class="labeled" onchange="changeOrder(this.checked);" checked>
 					</div>
 
 					<div class="form-element end">
