--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -36,7 +36,7 @@
 		<div id="content">
 			<div id="content-header">
 				<form action="/get_students" id="search" method="get" target="dataframe">
-					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="search(this, 'data');">
+					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTable();">
 
 					<div class="form-element">
 						<label class="select-label">Datum rodjenja:</label>
@@ -92,7 +92,7 @@
 
 					<div class="form-element">
 						<label class="select-label">Rastuci poredak:</label>
-						<input type="checkbox" class="labeled" onchange="fillTable(this.checked);" checked>
+						<input type="checkbox" class="labeled" oninput="changeOrder(this.checked);" checked>
 					</div>
 
 					<div class="form-element end">
