--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -28,11 +28,11 @@
 		<div id="content">
 			<div id="content-header">
 				<form action="/get_all_users" id="search" method="get" target="dataframe">
-					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="search(this, 'data-admin'); search(this, 'data-lecturer'); search(this, 'data-student');">
+					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="fillTables();">
 
 					<div class="form-element">
 						<label class="select-label">Rastuci poredak:</label>
-						<input type="checkbox" class="labeled" onclick="fillTables(this.checked);" checked>
+						<input type="checkbox" class="labeled" onclick="changeOrder(this.checked);" checked>
 					</div>
 				</form>
 			</div>
