--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 </head>
 <body>
+	<div id="background"></div>
 	<div id="wrapper">
 		<div id="login-wrapper">
 			<form action="/login_req" id="login" target="loginframe">
