--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 </head>
 <body onload="getToken(); displayUsername(); addTokenToForm('search'); /*addTokenToForm('newform');*/ addTokenToLinks(); submitSearch();">
+	<div id="background"></div>
 	<div id="wrapper">
 		<header>
 			<h1><a href="admin" class="tokenify">Admin</a> / Korisnici</h1>
