--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,7 +19,8 @@ html, body {
 	margin: 0;
 	background-color: var(--color-light);
 
-	overflow: auto;
+	overflow-y: auto;
+	position: relative;
 }
 
 a, p, h1, h2, h3, label, input, ::placeholder {
@@ -30,28 +31,39 @@ h1 {
 	font-size: 16px;
 }
 
-#wrapper {
-	height: 100%;
-	width: 100%;
+#background {
+	height: 100%; width: 100%;
+	position: fixed;
+	top: 0; left: 0;
+
 	background: rgb(2,0,36);
 	background-image: url("../images/bg.png");
 	
 	background-repeat: repeat;
 	background-size: 100px auto;
-
-	position: relative;
 }
 
-#wrapper:before {
+#background:before {
  	content:'';
- 	position:absolute;
- 	left:0; top:0;
- 	width:100%; height:100%;
- 	display:inline-block;
+ 	position: absolute;
+ 	top: 0; left: 0;
+ 	width:inherit; height:inherit;
+ 	display: block;
 
   	background: rgb(28,0,74,0.6);
 	background: linear-gradient(90deg, rgba(28,0,74,0.8) 0%, rgba(72,10,130,0.7) 37%, rgba(110,46,150,0.6) 100%);
- 	background-size: cover;
+
+  	background-size: cover;
+  	background-repeat: repeat-y;
+}
+
+#wrapper {
+	height: 100%;
+	width: 100%;
+
+	position: relative;
+
+	overflow-y: auto;
 }
 
 header {
