--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 </head>
 <body onload="getToken(); addTokenToLinks(); displayUsername();">
+	<div id="background"></div>
 	<div id="wrapper">
 		<div id="user">
 			<p id="user-name"></p>
