Updated deleteRow function.

--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -20,7 +20,7 @@
 		}
 	</script>
 </head>
-<body onload="getToken(); setDataType('subject', 'id'); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch(); makeRequest('/get_subject_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); setDataType('subject', 'id', 1); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch(); makeRequest('/get_subject_filters','sendframe'); initGetFilters('sendframe');">
 	<div id="background"></div>
 	<div id="wrapper">
 		<header>
