--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -20,7 +20,7 @@
 		}
 	</script>
 </head>
-<body onload="getToken(); setDataType('lecturer', 'lecturer'); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch(); makeRequest('/get_lecturer_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); setDataType('lecturer', 'lecturer', 3); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch(); makeRequest('/get_lecturer_filters','sendframe'); initGetFilters('sendframe');">
 	<div id="background"></div>
 	<div id="wrapper">
 		<header>
