--- a/src/main/resources/static/css/student-style.css
+++ b/src/main/resources/static/css/student-style.css
@@ -142,5 +142,30 @@ h1 {
 	height: 400px;
 	right: 0px;
     bottom: 0px;
+    visibility: hidden;
+}
+#examsframe{
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	right: 0px;
+    bottom: 0px;
     visibility: visible;
 }
+#sendframe{
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	right: 0px;
+    bottom: 0px;
+    visibility: hidden;
+}
+#budgetframe{
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	right: 0px;
+    bottom: 0px;
+    visibility: hidden;
+}
+
