--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -15,7 +15,8 @@
 		function populateFilters(){
 			addOptionsToFilter('lect-options', filters[0], true, 1, false);
 			addOptionsToFilter('major-options', filters[1], true, 1, true);
-			//addOptionsToFilter('new-major-options', filters[1], false, 0, true);
+			addOptionsToFilter('new-lect-options', filters[0], false, 0, false);
+			addOptionsToFilter('new-major-options', filters[1], false, 0, true);
 			initDropDowns();
 		}
 	</script>
@@ -111,7 +112,7 @@
 
 					<div class="form-element">
 						<label class="select-label">Rastuci poredak:</label>
-						<input type="checkbox" class="labeled" onchange="changeOrder(this.checked);" checked>
+						<input type="checkbox" class="labeled" oninput="changeOrder(this.checked);" checked>
 					</div>
 
 					<div class="form-element end">
@@ -137,10 +138,23 @@
 					<label for="name">Ime:</label><input type="text" name="name">
 					<label for="id">ID:</label><input type="text" name="id">
 					<label for="espb">ESPB:</label><input type="number" min="0" name="espb">
-					<label for="year">Godina:</label><input type="number" min="1900" max="3000" name="year">
-					<label for="lect_id">Predavac ID:</label><input type="text" name="lect_id">
-					<label for="major_id">Smer ID:</label><input type="text" name="major_id">
-					<label for="points_req">Broj poena:</label><input type="number" name="points_req">
+					<label for="year">Godina:</label><input type="number" min="2000" max="3000" name="year">
+
+					<label for="lect_id">Predavac</label>
+					<div class="dropdown no-auto-submit">
+							<input name="lect_id" value="" readonly>
+							<div class="dd-options" id="new-lect-options">
+							</div>
+						</div>
+
+					<label for="major_id">Smer</label>
+					<div class="dropdown no-auto-submit">
+							<input name="major_id" value="" readonly>
+							<div class="dd-options" id="new-major-options">
+							</div>
+						</div>
+
+					<label for="points_req">Broj poena:</label><input type="number" min="0" name="points_req">
 				</form>
 				<div class="flex-row wide pad-medium">
 					<button type="submit" form="newform">Submit</button>
